--- a/app/i18n/messages.fr.xlf
+++ b/app/i18n/messages.fr.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+<xliff version="1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
 
@@ -11,6 +11,16 @@
       <trans-unit id="mainId" datatype="html">
         <source>Main_stories_page</source>
         <target>Page principale</target>
+      </trans-unit>
+
+      <trans-unit id="pointsOpacityId" datatype="html">
+        <source>Points_opacity</source>
+        <target>Opacité des repères</target>
+      </trans-unit>
+
+      <trans-unit id="mapZoomId" datatype="html">
+        <source>Map_zoom</source>
+        <target>Zoom</target>
       </trans-unit>
 
     </body>
