add buttons to choose source-layer

--- a/app/i18n/messages.fr.xlf
+++ b/app/i18n/messages.fr.xlf
@@ -23,6 +23,22 @@
         <target>Zoom</target>
       </trans-unit>
 
+      <trans-unit id="chooseSourceId" datatype="html">
+        <source>Choose_source</source>
+        <target>Source</target>
+      </trans-unit>
+
+      <trans-unit id="chooseSourceIdGeo" datatype="html">
+        <source>Geoportal_source</source>
+        <target>Géoportail</target>
+      </trans-unit>
+
+      <trans-unit id="chooseSourceIdOsm" datatype="html">
+        <source>OSM_source</source>
+        <target>OpenStreetMap</target>
+      </trans-unit>
+
+
     </body>
   </file>
 </xliff>
